# goit-ds-hw-03

HomeWork1/: HW1_jupiter.ipynb  main.py  pyproject.toml
homework2/: authors.json  jupiter_hw2.ipynb  pyproject.toml
