[tool.poetry]
name = "homework1"
version = "0.1.0"
description = ""
authors = ["Lis <lytvinenko.i@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pymongo = "^4.7.2"
ipykernel = "^6.29.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
