[tool.poetry]
name = "homework2"
version = "0.1.0"
description = ""
authors = ["Lis <lytvinenko.i@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pymongo = "^4.7.2"
ipykernel = "^6.29.4"
beautifulsoup4 = "^4.12.3"
requests = "^2.31.0"
api = "^0.0.7"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
